--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       </div>
     </div>
     <script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/FaceWeb.loader.js";
       var config = {
